--- a/pooling/pooling.html
+++ b/pooling/pooling.html
@@ -218,7 +218,7 @@ div.csl-indent {
     names(pooled)[names(pooled) == "qbar"] &lt;- "estimate"
     pooled
 }
-&lt;bytecode: 0x107ea1e98&gt;
+&lt;bytecode: 0x11d2dec50&gt;
 &lt;environment: namespace:mice&gt;</code></pre>
 </div>
 </div>
